
set(OBJS_PRIMITIVES
  s_eq128.c
  s_le128.c
  s_lt128.c
  s_shortShiftLeft128.c
  s_shortShiftRight128.c
  s_shortShiftRightJam64.c
  s_shortShiftRightJam64Extra.c
  s_shortShiftRightJam128.c
  s_shortShiftRightJam128Extra.c
  s_shiftRightJam32.c
  s_shiftRightJam64.c
  s_shiftRightJam64Extra.c
  s_shiftRightJam128.c
  s_shiftRightJam128Extra.c
  s_shiftRightJam256M.c
  s_countLeadingZeros8.c
  s_countLeadingZeros16.c
  s_countLeadingZeros32.c
  s_countLeadingZeros64.c
  s_add128.c
  s_add256M.c
  s_sub128.c
  s_sub256M.c
  s_mul64ByShifted32To128.c
  s_mul64To128.c
  s_mul128By32.c
  s_mul128To256M.c
  s_approxRecip_1Ks.c
  s_approxRecipSqrt_1Ks.c
  s_approxRecipSqrt32_1.c
)

set(OBJS_SPECIALIZE
  8086-SSE/s_commonNaNToF16UI.c
  8086-SSE/s_propagateNaNF16UI.c
  8086-SSE/s_commonNaNToF32UI.c
  8086-SSE/s_propagateNaNF32UI.c
  8086-SSE/s_commonNaNToF64UI.c
  8086-SSE/s_propagateNaNF64UI.c
  8086-SSE/s_commonNaNToExtF80UI.c
  8086-SSE/s_propagateNaNExtF80UI.c
  8086-SSE/s_commonNaNToF128UI.c
  8086-SSE/s_propagateNaNF128UI.c
)

set(OBJS_OTHERS
  s_roundToUI8.c
  s_roundToUI16.c
  s_roundToUI32.c
  s_roundToUI64.c
  s_roundToI8.c
  s_roundToI16.c
  s_roundToI32.c
  s_roundToI64.c
  s_normSubnormalF16Sig.c
  s_roundPackToF16.c
  s_normRoundPackToF16.c
  s_addMagsF16.c
  s_subMagsF16.c
  s_normSubnormalF32Sig.c
  s_roundPackToF32.c
  s_normRoundPackToF32.c
  s_addMagsF32.c
  s_subMagsF32.c
  s_normSubnormalF64Sig.c
  s_roundPackToF64.c
  s_normRoundPackToF64.c
  s_addMagsF64.c
  s_subMagsF64.c
  s_packToExtF80.c
  s_normSubnormalExtF80Sig.c
  s_roundPackToExtF80.c
  s_normRoundPackToExtF80.c
  s_addMagsExtF80.c
  s_subMagsExtF80.c
  s_normSubnormalF128Sig.c
  s_roundPackToF128.c
  s_normRoundPackToF128.c
  s_addMagsF128.c
  s_subMagsF128.c
  isNaN.c
  isSignalingNaN.c
  ui32_to_f16.c
  ui32_to_f32.c
  ui32_to_f64.c
  ui32_to_extF80.c
  ui32_to_f128.c
  ui64_to_f16.c
  ui64_to_f32.c
  ui64_to_f64.c
  ui64_to_extF80.c
  ui64_to_f128.c
  i32_to_f16.c
  i32_to_f32.c
  i32_to_f64.c
  i32_to_extF80.c
  i32_to_f128.c
  i64_to_f16.c
  i64_to_f32.c
  i64_to_f64.c
  i64_to_extF80.c
  i64_to_f128.c
  f16_to_ui8.c
  f16_to_ui16.c
  f16_to_ui32.c
  f16_to_ui64.c
  f16_to_i8.c
  f16_to_i16.c
  f16_to_i32.c
  f16_to_i64.c
  f16_to_ui8_r_minMag.c
  f16_to_ui16_r_minMag.c
  f16_to_ui32_r_minMag.c
  f16_to_ui64_r_minMag.c
  f16_to_i8_r_minMag.c
  f16_to_i16_r_minMag.c
  f16_to_i32_r_minMag.c
  f16_to_i64_r_minMag.c
  f16_to_f32.c
  f16_to_f64.c
  f16_to_extF80.c
  f16_getExp.c
  f16_getMant.c
  f16_roundToInt.c
  f16_class.c
  f16_compare.c
  f16_max.c
  f16_min.c
  f16_minmax.c
  f16_range.c
  f16_addsub.c
  f16_mul.c
  f16_mulAdd.c
  f16_div.c
  f16_sqrt.c
  f32_to_ui8.c
  f32_to_ui32.c
  f32_to_ui64.c
  f32_to_i8.c
  f32_to_i32.c
  f32_to_i64.c
  f32_to_ui8_r_minMag.c
  f32_to_ui32_r_minMag.c
  f32_to_ui64_r_minMag.c
  f32_to_i8_r_minMag.c
  f32_to_i32_r_minMag.c
  f32_to_i64_r_minMag.c
  f32_to_f16.c
  f32_to_f64.c
  f32_to_extF80.c
  f32_to_f128.c
  f32_getExp.c
  f32_getMant.c
  f32_roundToInt.c
  f32_class.c
  f32_compare.c
  f32_max.c
  f32_min.c
  f32_minmax.c
  f32_range.c
  f32_scalef.c
  f32_frc.c
  f32_addsub.c
  f32_mul.c
  f32_mulAdd.c
  f32_div.c
  f32_sqrt.c
  f64_to_ui32.c
  f64_to_ui64.c
  f64_to_i32.c
  f64_to_i64.c
  f64_to_ui32_r_minMag.c
  f64_to_ui64_r_minMag.c
  f64_to_i32_r_minMag.c
  f64_to_i64_r_minMag.c
  f64_to_f16.c
  f64_to_f32.c
  f64_to_extF80.c
  f64_to_f128.c
  f64_getExp.c
  f64_getMant.c
  f64_roundToInt.c
  f64_class.c
  f64_compare.c
  f64_max.c
  f64_min.c
  f64_minmax.c
  f64_range.c
  f64_scalef.c
  f64_frc.c
  f64_addsub.c
  f64_mul.c
  f64_mulAdd.c
  f64_div.c
  f64_sqrt.c
  extF80_to_ui32.c
  extF80_to_ui64.c
  extF80_to_i32.c
  extF80_to_i64.c
  extF80_to_ui32_r_minMag.c
  extF80_to_ui64_r_minMag.c
  extF80_to_i32_r_minMag.c
  extF80_to_i64_r_minMag.c
  extF80_to_f16.c
  extF80_to_f32.c
  extF80_to_f64.c
  extF80_to_f128.c
  extF80_roundToInt.c
  extF80_class.c
  extF80_compare.c
  extF80_extract.c
  extF80_scale.c
  extF80_addsub.c
  extF80_mul.c
  extF80_div.c
  extF80_rem.c
  extF80_sqrt.c
  f128_to_ui32.c
  f128_to_ui64.c
  f128_to_i32.c
  f128_to_i64.c
  f128_to_ui32_r_minMag.c
  f128_to_ui64_r_minMag.c
  f128_to_i32_r_minMag.c
  f128_to_i64_r_minMag.c
  f128_to_f32.c
  f128_to_extF80.c
  f128_to_f64.c
  f128_roundToInt.c
  f128_addsub.c
  f128_mul.c
  f128_mulAdd.c
  f128_div.c
)

set(SOFTFLOAT_SRCS
    ${OBJS_PRIMITIVES} ${OBJS_SPECIALIZE} ${OBJS_OTHERS}
)
set_source_files_properties(${SOFTFLOAT_SRCS} PROPERTIES LANGUAGE CXX)
add_library(softfloat STATIC ${SOFTFLOAT_SRCS})

target_include_directories(softfloat PRIVATE 
${CMAKE_CURRENT_SOURCE_DIR}
${CMAKE_CURRENT_SOURCE_DIR}/../..
${CMAKE_CURRENT_SOURCE_DIR}/include)

target_compile_definitions(softfloat PRIVATE -DSOFTFLOAT_FAST_INT64 -DINLINE_LEVEL=5 -DSOFTFLOAT_FAST_DIV32TO16 -DSOFTFLOAT_FAST_DIV64TO32)
target_compile_options(softfloat PRIVATE -Wno-deprecated-declarations -Wno-braced-scalar-init)